--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.5.2",
   "description": "webpack plugin for vConsole",
   "main": "index.js",
+  "typings": "./types.d.ts",
   "scripts": {
     "lint": "eslint index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
