--- a/demo/razzle/package.json
+++ b/demo/razzle/package.json
@@ -3,6 +3,7 @@
   "version": "4.2.4",
   "license": "MIT",
   "scripts": {
+    "deps": "npm i",
     "start": "razzle start",
     "build": "razzle build --noninteractive"
   },
@@ -12,7 +13,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
-    "vconsole-webpack-plugin": "^1.7.3"
+    "vconsole-webpack-plugin": "file:../.."
   },
   "devDependencies": {
     "babel-preset-razzle": "4.2.4",
