--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   },
   "homepage": "https://github.com/diamont1001/vconsole-webpack-plugin#readme",
   "dependencies": {
-    "vconsole": "^3.6"
+    "resize-observer-polyfill": "^1.5.1",
+    "vconsole": "^3.15"
   },
   "devDependencies": {
     "eslint": "^3.3.0",
